xdebug remote debug for OSX

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,6 +1,6 @@
-date.timezone=Europe/Berlin
+date.timezone=Europe/Paris
 
 [xdebug]
 xdebug.remote_enable=on
-xdebug.remote_connect_back=On
-xdebug.remote_autostart = 1
+xdebug.remote_autostart=1
+xdebug.remote_host=docker.for.mac.host.internal
