--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,1 +1,6 @@
 DirectoryIndex index.php
+
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.php?_path=$1 [NC,L,QSA]
